--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.1",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
-    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.2",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/router": "^7.2.4",
+    "@fortawesome/fontawesome-free": "^5.7.1",
     "cloneable-ts": "1.0.15",
-    "core-js": "^2.6.0",
+    "core-js": "^2.6.4",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "primeng": "^7.0.5",
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.1",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
-    "@types/jasmine": "~3.3.1",
+    "@angular-devkit/build-angular": "~0.13.1",
+    "@angular/cli": "~7.3.1",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.12",
     "codelyzer": "~4.5.0",
@@ -44,9 +45,9 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.1",
+    "protractor": "~5.4.2",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.12.1",
+    "typescript": "3.2.4"
   }
 }
